@@ -5,12 +5,12 @@ import dev.emi.emi.api.render.EmiTexture;
 import dev.emi.emi.api.stack.EmiIngredient;
 import dev.emi.emi.api.stack.EmiStack;
 import dev.emi.emi.api.widget.WidgetHolder;
-import net.tarantel.chickenroost.recipes.BreederRecipe;
+import net.tarantel.chickenroost.recipes.Breeder_Recipe;
 
 public class EmiBreederRecipe extends BasicEmiRecipe {
 
-    public EmiBreederRecipe(BreederRecipe recipe) {
-        super(EmiRoostPlugin.BREEDER_CATEGORY, recipe.getId(), 100, 20);
+    public EmiBreederRecipe(Breeder_Recipe recipe) {
+        super(EmiPlugin.BREEDER_CATEGORY, recipe.getId(), 100, 20);
         this.inputs.add(EmiIngredient.of(recipe.getIngredients().get(0)));
         this.catalysts.add(EmiIngredient.of(recipe.getIngredients().get(1)));
         this.catalysts.add(EmiIngredient.of(recipe.getIngredients().get(2)));
@@ -20,11 +20,11 @@ public class EmiBreederRecipe extends BasicEmiRecipe {
     @Override
     public void addWidgets(WidgetHolder widgets) {
         widgets.addTexture(EmiTexture.EMPTY_ARROW, 58, 0);
-        widgets.addSlot(inputs.getFirst(), 20, 0);
+        widgets.addSlot(inputs.get(0), 20, 0);
         widgets.addSlot(catalysts.get(0), 0, 0);
         widgets.addSlot(catalysts.get(1), 40, 0);
         widgets.addAnimatedTexture(EmiTexture.FULL_ARROW, 58, 0,
                 500, true, false, false);
-        widgets.addSlot(outputs.getFirst(), 82, 0).recipeContext(this).getRecipe();
+        widgets.addSlot(outputs.get(0), 82, 0).recipeContext(this).getRecipe();
     }
 }
